Added support for passing --enable-preview and --add-modules to the debuggee JVM.